# sip-voice-transport

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  sip-voice-transport.implementation-spec.md  test_call.py
examples/: mac_voice_server.py
src/sip_voice_transport/: __init__.py  audio_codec.py  base_sip_provider.py  base_transport.py  config.py  dashboard.py  did_router.py  exceptions.py  mac_utils.py  transport.py  webhook.py
src/sip_voice_transport/cli/: app.py
src/sip_voice_transport/providers/: __init__.py  telnyx_provider.py  twilio_provider.py
tests/: conftest.py  test_audio_codec.py  test_config.py  test_did_router.py  test_telnyx_provider.py  test_transport.py  test_twilio_provider.py  test_webhook.py
